# ai-session-tracker

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
context/: aktueller-systemstand.md
logs/: example-claude-report.json  example-claude-report.md
logs/2026-06-25/: 2026-06-25-ai-session-tracker-erweiterung.md
obsidian-staging/: 2026-06-25-ai-session-tracker-entscheidungen.md
src/codex_session_tracker/: __init__.py  checkpoints.py  claude_reports.py  cli.py  config.py  git_utils.py  markdown.py  prompts.py  reports.py  storage.py  time_utils.py
src/codex_session_tracker/providers/: claude_code.py
