[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-session-tracker"
version = "0.2.0"
description = "Local CLI for documenting and evaluating AI sessions (Codex, Claude Code, and more)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Agentic OS" }
]
dependencies = []

[project.scripts]
ai-tracker = "codex_session_tracker.cli:main"
codex-tracker = "codex_session_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
